# auto_turret

./: .gitignore  README.md  all_scripts.py  pyproject.toml  requirements.txt  runtime_params.json
cli/: main.py
face_tracking/: camera.py  common.py  config.py  detector.py  helpers.py  live_tuning.py  pan_tilt.py  processor.py  tracker.py
src/face_tracking/: __init__.py  camera.py  config.py  detector.py  helpers.py  processor.py  tracker.py
